Done Event Map Activity layout
- Todo
  - fix camera permission request Dialog
  - replace MainActivity with other login or something
  - make eventMapActivity
    acquire DB to know each event points

Signed-off-by: how8570 <joe13512345@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QRcode_to_database</string>
+    <string name="title_activity_event_map">Map</string>
+    <string name="qrcode_scan">QRCode Scan</string>
 </resources>
