--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">QRcode_to_database</string>
     <string name="title_activity_event_map">Map</string>
     <string name="qrcode_scan">QRCode Scan</string>
+    <string name="refresh">Refresh</string>
+    <string name="event_img">Event Img</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
